[gd_scene load_steps=4 format=3 uid="uid://cvhu1xm2ecqne"]

[ext_resource type="Script" path="res://Scenes/ShowDialogueHUD.gd" id="1_prukx"]
[ext_resource type="FontFile" uid="uid://cyai6u1vf7yd7" path="res://Assets/PixelifySans-Regular.ttf" id="1_sw1ca"]
[ext_resource type="Script" path="res://Scenes/ShowHud.gd" id="1_vg2at"]

[node name="ShowDialogueHUD" type="CanvasLayer"]
script = ExtResource("1_vg2at")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 0.224
anchor_bottom = 0.347556
offset_left = 298.0
offset_right = 297.984
offset_bottom = -0.0720062
color = Color(1, 1, 1, 0.313726)
metadata/_edit_use_anchors_ = true

[node name="NamesOfContexts" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 298.0
offset_right = -1.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "hunger_full:
player_healthy:
total_apple:
total_banana:
total_watermelon:
rain_state:
outside:"
autowrap_mode = 2
script = ExtResource("1_prukx")
metadata/_edit_use_anchors_ = true

[node name="Hunger" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 43.0
offset_right = -284.03
offset_bottom = -205.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "0"
autowrap_mode = 2

[node name="Health" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 57.0
offset_top = 11.0
offset_right = -268.03
offset_bottom = -183.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "0
"

[node name="TotalApple" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 45.0
offset_top = 21.0
offset_right = -299.03
offset_bottom = -174.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 6
text = "0"

[node name="TotalBanana" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 51.0
offset_top = 31.0
offset_right = -299.637
offset_bottom = -163.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "0"

[node name="TotalWatermelon" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 66.0
offset_top = 42.0
offset_right = -299.03
offset_bottom = -163.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "0"

[node name="RainState" type="Label" parent="NamesOfContexts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.518
anchor_bottom = 3.273
offset_left = 41.0
offset_top = 51.0
offset_right = -301.03
offset_bottom = -154.018
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "0"

[node name="CurrentScene" type="Label" parent="NamesOfContexts"]
layout_mode = 0
offset_left = 44.0
offset_top = 61.0
offset_right = 84.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sw1ca")
theme_override_font_sizes/font_size = 7
text = "Overworld"
